--- a/src/frontend/src/components/editors/EditorBase.scss
+++ b/src/frontend/src/components/editors/EditorBase.scss
@@ -5,7 +5,6 @@
   grid-template-columns: 100%;
   grid-template-rows: auto auto auto 1fr;
   height: 100%;
-  row-gap: 20px;
 
   > h2 {
     grid-row: 1 / 2;
@@ -13,7 +12,7 @@
     font-size: 1.5rem;
     color: var.$mainDark;
     position: relative;
-    margin-bottom: 5px;
+    margin-bottom: 25px;
     
     &:after {
       $padding: 20px;
